fixed the issue with the layout where the cards would overflow

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0;
+    overflow-y: auto;
 }
 
 .title svg {
@@ -53,12 +54,11 @@ h1 {
     padding: 30px;
     border: 5px solid white;
     border-radius: 5px;
-    height: 70vh;
+    min-height: 70vh;
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: auto;
-    justify-content:flex-start;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 25px;
+    place-items: center;
 }
 
 .footer {
@@ -70,10 +70,10 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    gap: 10px;
     border: 1px solid white;
     border-radius: 20px;
-    height: 280px;
+    height: 260px;
     width: 160px;
     text-align: center;
     padding: 5px;
@@ -91,6 +91,11 @@ h1 {
 .remove-book:hover {
     background-color: rgb(214, 44, 44);
     color: white;
+}
+
+.book-card h3, 
+.book-card h5 {
+    min-height: 20px;
 }
 
  .modals{
